# speedtest_youtube

./: Makefile  README.md  app.py  pyproject.toml  run_speedtest_youtube.sh  youtube_speedtest_gnuplot.sh
docs/: ressources.md
scripts/: gnuplot_speedtest_youtube_plt.sh
speedtest_youtube/: main.py
speedtest_youtube/models/: ytdl_sample.py
speedtest_youtube/services/render/: with_table.py
speedtest_youtube/services/youtube_dl/: embedded.py  external.py
