[tool.poetry]
name = "speedtest_youtube"
version = "0.1.0"
description = ""
authors = ["ATTY Lionel <lionel.atty@365talents.com>"]

[tool.poetry.dependencies]
python = "^3.7.3"
youtube_dl = "^2020.11.12"
humanfriendly = "^8.2"
typer = {extras = ["all"], version = "^0.3.2"}
click-spinner = "^0.1.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
